--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "immutable": "^3.8.2",
+    "moment": "^2.26.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4",
     "parcel-bundler": "^1.12.4",
@@ -31,6 +32,11 @@
     "socket.io": "^2.3.0"
   },
   "devDependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.1.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "sass": "^1.26.5"
   }
 }
